--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,8 @@
      <Compile Include="Assets\Script\Restart.cs" />
      <Compile Include="Assets\Script\Score.cs" />
      <Compile Include="Assets\Script\Stop.cs" />
+     <Compile Include="Assets\Script\WallObject.cs" />
+     <Compile Include="Assets\Script\logoSystem\LogoSystem.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
